made custom css

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <body>
 
-    <nav class="navbar navbar-expand-sm navbar-dark bg-primary mb-3">
+    <nav class="navbar navbar-expand-sm navbar-dark bg-transparent mb-3">
         <div class="container">
             <a class="navbar-brand" href="/">Logo</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
@@ -65,6 +65,10 @@
         <h1>Title of this section</h1>
         <p class="lead">Use this document as a way to quickly start any new project.<br>
           All you get is this text and a mostly barebones HTML document.</p>
+        <p>
+            <button type="button" class="btn btn-brand">Primary</button>
+            <button type="button" class="btn btn-green">Secondary</button>
+        </p>
       </div>
 
     </main><!-- /.container -->
