HTML layout, custom CSS, VS workspace save

--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
 
     <nav class="navbar navbar-expand-sm navbar-dark bg-transparent mb-3">
         <div class="container">
-            <a class="navbar-brand" href="/">Logo</a>
+            <a class="navbar-brand" href="/">Natoni</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
+                 <!--  
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" href="/">Home</a>
@@ -35,24 +36,33 @@
                         <a class="nav-link" href="#">About</a>
                     </li>
                 </ul>
+                -->
                 <ul class="navbar-nav ml-auto">
                         <li class="nav-item dropdown">
                             <a href="" class="nav-link dropdown-toggle"
-                            data-toggle="dropdown" id="navbarDropdownMenuLink">Your Ideas</a>
+                            data-toggle="dropdown" id="navbarDropdownMenuLink">Athletes</a>
                             <div class="dropdown-menu">
-                                <a href="#" class="dropdown-item">Ideas</a>
-                                <a href="#" class="dropdown-item">Add</a>
+                                <a href="#" class="dropdown-item">Sadio Mane</a>
+                                <a href="#" class="dropdown-item">Mohamed Salah</a>
+                            </div>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a href="" class="nav-link dropdown-toggle"
+                            data-toggle="dropdown" id="navbarDropdownMenuLink">Coaches</a>
+                            <div class="dropdown-menu">
+                                <a href="#" class="dropdown-item">Jurgen Klopp</a>
+                                <a href="#" class="dropdown-item">Pep Guardiola</a>
                             </div>
                         </li>
                         <li class="nav-item">
-                        <a href="#" class="nav-link">Logout</a>
+                        <a href="#" class="nav-link">Explore</a>
                     </li>
 
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Login</a>
+                            <a href="#" class="nav-link">News</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Register</a>
+                            <a href="#" class="nav-link">Login</a>
                         </li>
                 </ul>
             </div>
