HTML layout and CSS styling

--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
 
     <nav class="navbar navbar-expand-sm navbar-dark bg-transparent mb-3">
         <div class="container">
-            <a class="navbar-brand" href="/">Natoni</a>
+            <a class="navbar-brand" href="/">
+                <img src="./imgs/natoni-logo.png" width="74" height="58" class="d-inline-block" alt="natoni-logo">
+                Natoni
+            </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -64,6 +67,11 @@
                         <li class="nav-item">
                             <a href="#" class="nav-link">Login</a>
                         </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">
+                                <img src="./imgs/navbar-graphic.png" width="34" height="22" class="d-inline-block" alt="natoni-graphic">
+                            </a>
+                        </li>
                 </ul>
             </div>
         </div>
@@ -72,9 +80,8 @@
     <main role="main" class="container">
 
       <div class="container">
-        <h1>Title of this section</h1>
-        <p class="lead">Use this document as a way to quickly start any new project.<br>
-          All you get is this text and a mostly barebones HTML document.</p>
+        <h1>Success is not<br>an accident</h1>
+        <p class="lead">It is hard work, perserverance, learning, studying,<br> sacrifice and most of all, love of what you are doing<br> or learning to do.</p>
         <p>
             <button type="button" class="btn btn-brand">Primary</button>
             <button type="button" class="btn btn-green">Secondary</button>
