Scaffolding based off of a Dribbble landing page example

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   <body>
 
     <nav class="navbar navbar-expand-sm navbar-dark bg-transparent mb-3">
-        <div class="container">
-            <a class="navbar-brand" href="/">
+        <div class="container mt-4">
+            <a class="navbar-brand text-uppercase" href="/">
                 <img src="./imgs/natoni-logo.png" width="74" height="58" class="d-inline-block" alt="natoni-logo">
                 Natoni
             </a>
@@ -30,44 +30,34 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                 <!--  
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="/">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
-                    </li>
-                </ul>
-                -->
                 <ul class="navbar-nav ml-auto">
-                        <li class="nav-item dropdown">
-                            <a href="" class="nav-link dropdown-toggle"
+                        <li class="nav-item dropdown pr-4">
+                            <a href="" class="nav-link dropdown-toggle text-white"
                             data-toggle="dropdown" id="navbarDropdownMenuLink">Athletes</a>
                             <div class="dropdown-menu">
                                 <a href="#" class="dropdown-item">Sadio Mane</a>
                                 <a href="#" class="dropdown-item">Mohamed Salah</a>
                             </div>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a href="" class="nav-link dropdown-toggle"
+                        <li class="nav-item dropdown pr-4">
+                            <a href="" class="nav-link dropdown-toggle text-white"
                             data-toggle="dropdown" id="navbarDropdownMenuLink">Coaches</a>
                             <div class="dropdown-menu">
                                 <a href="#" class="dropdown-item">Jurgen Klopp</a>
                                 <a href="#" class="dropdown-item">Pep Guardiola</a>
                             </div>
                         </li>
-                        <li class="nav-item">
-                        <a href="#" class="nav-link">Explore</a>
+                        <li class="nav-item pr-4">
+                        <a href="#" class="nav-link text-white">Explore</a>
                     </li>
 
-                        <li class="nav-item">
-                            <a href="#" class="nav-link">News</a>
+                        <li class="nav-item pr-4">
+                            <a href="#" class="nav-link text-white">News</a>
                         </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link">Login</a>
+                        <li class="nav-item pr-4">
+                            <a href="#" class="nav-link text-white">Login</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item pr-4">
                             <a href="#" class="nav-link">
                                 <img src="./imgs/navbar-graphic.png" width="34" height="22" class="d-inline-block" alt="natoni-graphic">
                             </a>
@@ -79,13 +69,11 @@
 
     <main role="main" class="container">
 
-      <div class="container">
-        <h1>Success is not<br>an accident</h1>
-        <p class="lead">It is hard work, perserverance, learning, studying,<br> sacrifice and most of all, love of what you are doing<br> or learning to do.</p>
-        <p>
-            <button type="button" class="btn btn-brand">Primary</button>
-            <button type="button" class="btn btn-green">Secondary</button>
-        </p>
+      <div class="container ml-1 w-50 pt-10">
+        <h1 class="display-3 text-white mb-5 font-weight-bold">Success is not<br>an accident</h1>
+            <div class="container bl-cyan pl-5">
+                <p class="lead text-white">It is hard work, perserverance, learning, studying,<br> sacrifice and most of all, love of what you are doing<br> or learning to do.</p>
+            </div>
       </div>
 
     </main><!-- /.container -->
